--- a/frontend/BgreenNet/src/app/home/home/home.html
+++ b/frontend/BgreenNet/src/app/home/home/home.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+<div class="h-screen flex flex-col justify-center items-center bg-gray-100">
+      <h1 class="text-3xl font-bold text-gray-800 mb-8">Bienvenido al sistema</h1>
+
+      <div class="flex gap-4">
+        <button
+          class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition"
+          (click)="irAUsuarios()">
+          Ir a Usuarios
+        </button>
+
+
+         <button
+          class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition"
+          (click)="logout()">
+         Salir
+        </button>
+        
+      </div>
+    </div>
